--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@
 .main {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border: solid green;
+     height: 300px;
+     width: 500px;
+     margin-left: 150px;
+     margin-bottom: 20px;
+     margin-top: 50px;
    
     
    
@@ -21,17 +26,19 @@
 .info {
     background-color: rgb(24, 225, 158);
     color: white;
-    margin-left: 8rem;
-    margin-right: 8rem;
     border-radius: 5px;
+    margin-right: 150px;
+    margin-left: 150px;
+    
 }
+.info,
 .intro,
 .parrafo,
 .form,
-.info,
 .gamer,
 .computer
 {
+    margin-bottom: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,5 +47,5 @@
 }
 .images {
     width: 350px;
-   margin-left: 360px;
+   margin-left: 230px;
 }
